# backupFiles

./: CMake_Boost.txt  logout.sh
UMUC/: CSE 326 Assignment 2.webarchive  P2SolutionDescription.pages  P3SolutionDescription.pages  posfix_infix expressions.webarchive
UMUC/P3GUI.mindnode/: contents.xml  viewState.plist
UMUC/SDEV 325/: HelloWorld.java  McCutchen_Kelly_Lab0.pages  antistigmatraining.pages  main.cpp  main.php
eclipse-workspace/.metadata/: version.ini
eclipse-workspace/P2GUI/: .project  Output.txt  byte3.txt
eclipse-workspace/P3GUI/: .project
eclipse-workspace/P4GUI/: .project
eclipse-workspace/Project1_CS350_DataStructures/: .project
projects/FutureProject_Notes/: Creatures.txt  FutureIdeas.txt  FutureIdeas1.txt  eventQuest.txt
projects/VulkanInit/: Makefile  VulkanTest  info.me  main.cpp
projects/VulkanTest/: Makefile  VulkanTest  info.me  initMakefile  main.cpp  vertBuffer.cpp
projects/cpp/: CppFileGen.java  client.cpp  cmdInjection.c
projects/cpp/initial/: CMakeCache.txt  CMakeLists.txt  CppFileGen.java  IShape2D.hpp  IShape2D.hpp.gch  InitialProject  Makefile  Maths.cpp  Maths.hpp  Message.cpp  Message.hpp  Object.cpp  Object.hpp  Triangle.cpp  Triangle.hpp  VirtualObject.cpp  VirtualObject.hpp  bcomp.sh  clang_comp.sh  cmake_install.cmake  compile.sh  main.cpp
projects/haskell/: first  first.hs  stack.yaml
projects/java/: CmdInjection.java  (+1 more)
scrits/: VulkanSDK.sh  boost.info  compile.sh  first.sh  setupCode.sh  setupQt.sh  setupSys.sh  setupVar.sh  temp.info  updateSys.sh  updateVulkan.sh  var.sh  var2.sh  vulkanSetup.info
(+390 files in other folders)
